Add updated Jupyter notebook analysis of gender identity data

--- a/gender_identity_analysis.ipynb
+++ b/gender_identity_analysis.ipynb
@@ -1,82 +1,250 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "503de40f",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef9929f5",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5dfd1ec",
-   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Gender Identity Census Analysis (ONS 2021)\n",
     "\n",
-    "This notebook visualises gender identity across UK local authorities based on Census 2021 data.\n",
+    "\"\"\"\n",
+    "Gender Identity Analysis - Jupyter Optimized\n",
+    "Creates histogram and pie chart from CSV data\n",
+    "\"\"\"\n",
     "\n",
-    "It produces:\n",
-    "- A bar chart comparing gender identity categories across local authorities\n",
-    "- A pie chart showing total responses across all regions\n",
+    "import sys\n",
+    "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "Dataset: `gender_identity_by_area.csv`\n"
+    "# Print system info for debugging (helpful for Jupyter)\n",
+    "print(f\"Python version: {sys.version}\")\n",
+    "print(f\"Current directory: {os.getcwd()}\")\n",
+    "print(\"-\" * 50)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e9aac697",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80f3a195",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Load data\n",
-    "df = pd.read_csv(\"gender_identity_by_area.csv\")\n",
-    "df = df[df['Gender identity (8 categories)'] != 'Does not apply']\n"
+    "# Import required libraries with error handling\n",
+    "try:\n",
+    "    import pandas as pd\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    print(\"✅ Successfully imported pandas and matplotlib\")\n",
+    "except ImportError as e:\n",
+    "    print(f\"❌ Import error: {e}\")\n",
+    "    print(\"Install missing packages with:\")\n",
+    "    print(\"pip install pandas matplotlib\")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7cf50a6b",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee443a29",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Bar chart by local authority\n",
-    "pivot_df = df.pivot(\n",
-    "    index='Gender identity (8 categories)',\n",
-    "    columns='Lower Tier Local Authorities',\n",
-    "    values='Observation'\n",
-    ")\n",
+    "def load_and_validate_data(csv_file=\"gender_identity_by_area.csv\"):\n",
+    "    \"\"\"Load CSV file with validation\"\"\"\n",
+    "    try:\n",
+    "        # Check if file exists\n",
+    "        if not Path(csv_file).exists():\n",
+    "            print(f\"❌ File not found: {csv_file}\")\n",
+    "            print(f\"Current directory contents: {list(Path('.').glob('*.csv'))}\")\n",
+    "            return None\n",
+    "        \n",
+    "        # Load the CSV file\n",
+    "        df = pd.read_csv(csv_file)\n",
+    "        print(f\"✅ Successfully loaded {csv_file}\")\n",
+    "        print(f\"📊 Data shape: {df.shape}\")\n",
+    "        print(f\"📋 Columns: {list(df.columns)}\")\n",
+    "        \n",
+    "        return df\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error loading CSV: {e}\")\n",
+    "        return None\n",
     "\n",
-    "pivot_df.plot(kind='bar', figsize=(12, 6), log=True)\n",
-    "plt.title(\"Gender Identity by Local Authority (log scale)\")\n",
-    "plt.ylabel(\"Number of People (log scale)\")\n",
-    "plt.xlabel(\"Gender Identity Category\")\n",
-    "plt.xticks(rotation=45, ha='right')\n",
-    "plt.legend(title=\"Local Authority\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n"
+    "def display_data_summary(df):\n",
+    "    \"\"\"Display useful data summary\"\"\"\n",
+    "    try:\n",
+    "        print(\"\\n📈 DATA SUMMARY:\")\n",
+    "        print(\"=\" * 40)\n",
+    "        \n",
+    "        # Show unique gender categories\n",
+    "        gender_categories = df['Gender identity (8 categories)'].unique()\n",
+    "        print(f\"Gender categories ({len(gender_categories)}):\")\n",
+    "        for i, category in enumerate(gender_categories, 1):\n",
+    "            print(f\"  {i}. {category}\")\n",
+    "        \n",
+    "        # Show unique authorities\n",
+    "        authorities = df['Lower Tier Local Authorities'].unique()\n",
+    "        print(f\"\\nLocal authorities ({len(authorities)}):\")\n",
+    "        for i, authority in enumerate(authorities[:5], 1):  # Show first 5\n",
+    "            print(f\"  {i}. {authority}\")\n",
+    "        if len(authorities) > 5:\n",
+    "            print(f\"  ... and {len(authorities) - 5} more\")\n",
+    "        \n",
+    "        # Show total observations\n",
+    "        total_obs = df['Observation'].sum()\n",
+    "        print(f\"\\nTotal observations: {total_obs:,}\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error displaying summary: {e}\")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8cae0ec1",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dcff7c4",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Pie chart of totals\n",
-    "summary_df = df.groupby('Gender identity (8 categories)')['Observation'].sum().sort_values(ascending=False)\n",
+    "# Load and examine the data\n",
+    "print(\"🚀 Starting Gender Identity Analysis\")\n",
+    "print(\"=\" * 50)\n",
     "\n",
-    "plt.figure(figsize=(8, 8))\n",
-    "plt.pie(summary_df, labels=summary_df.index, autopct='%1.1f%%', startangle=90, counterclock=False)\n",
-    "plt.title(\"Overall Gender Identity Distribution (All Areas)\")\n",
-    "plt.axis('equal')\n",
-    "plt.show()\n"
+    "df = load_and_validate_data()\n",
+    "if df is not None:\n",
+    "    display_data_summary(df)\n",
+    "else:\n",
+    "    print(\"Cannot proceed without data\")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9b789964",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffe349cc",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def create_histogram(df, save_file=\"gender_identity_histogram_log.png\"):\n",
+    "    \"\"\"Create and save histogram\"\"\"\n",
+    "    try:\n",
+    "        # Filter out 'Does not apply'\n",
+    "        df_filtered = df[df['Gender identity (8 categories)'] != 'Does not apply']\n",
+    "        print(f\"📊 Filtered data shape: {df_filtered.shape}\")\n",
+    "        \n",
+    "        # Pivot data: gender identity vs authority\n",
+    "        pivot_df = df_filtered.pivot(\n",
+    "            index='Gender identity (8 categories)',\n",
+    "            columns='Lower Tier Local Authorities',\n",
+    "            values='Observation'\n",
+    "        )\n",
+    "        \n",
+    "        # Create bar chart\n",
+    "        plt.figure(figsize=(12, 6))\n",
+    "        ax = pivot_df.plot(kind='bar', figsize=(12, 6), log=True)\n",
+    "        \n",
+    "        plt.title(\"Gender Identity by Local Authority (log scale)\", fontsize=14, fontweight='bold')\n",
+    "        plt.ylabel(\"Number of People (log scale)\")\n",
+    "        plt.xlabel(\"Gender Identity Category\")\n",
+    "        plt.xticks(rotation=45, ha='right')\n",
+    "        plt.legend(title=\"Local Authority\", bbox_to_anchor=(1.05, 1), loc='upper left')\n",
+    "        plt.tight_layout()\n",
+    "        \n",
+    "        # Save the plot\n",
+    "        plt.savefig(save_file, dpi=300, bbox_inches='tight')\n",
+    "        print(f\"✅ Histogram saved as {save_file}\")\n",
+    "        \n",
+    "        # Show in Jupyter\n",
+    "        plt.show()\n",
+    "        \n",
+    "        return True\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error creating histogram: {e}\")\n",
+    "        return False\n",
+    "\n",
+    "# Create the histogram\n",
+    "if df is not None:\n",
+    "    print(\"\\n📊 Creating histogram...\")\n",
+    "    histogram_success = create_histogram(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0360974",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_pie_chart(df, save_file=\"gender_identity_pie_chart.png\"):\n",
+    "    \"\"\"Create and save pie chart\"\"\"\n",
+    "    try:\n",
+    "        # Filter out 'Does not apply'\n",
+    "        df_filtered = df[df['Gender identity (8 categories)'] != 'Does not apply']\n",
+    "        \n",
+    "        # Create summary data\n",
+    "        summary_df = df_filtered.groupby('Gender identity (8 categories)')['Observation'].sum().sort_values(ascending=False)\n",
+    "        \n",
+    "        # Create pie chart\n",
+    "        plt.figure(figsize=(10, 8))\n",
+    "        colors = plt.cm.Set3(range(len(summary_df)))\n",
+    "        \n",
+    "        wedges, texts, autotexts = plt.pie(\n",
+    "            summary_df, \n",
+    "            labels=summary_df.index, \n",
+    "            autopct='%1.1f%%', \n",
+    "            startangle=90, \n",
+    "            counterclock=False,\n",
+    "            colors=colors\n",
+    "        )\n",
+    "        \n",
+    "        # Improve text readability\n",
+    "        for autotext in autotexts:\n",
+    "            autotext.set_color('white')\n",
+    "            autotext.set_fontweight('bold')\n",
+    "        \n",
+    "        plt.title(\"Overall Gender Identity Distribution (All Areas)\", \n",
+    "                 fontsize=14, fontweight='bold', pad=20)\n",
+    "        plt.axis('equal')\n",
+    "        \n",
+    "        # Save the plot\n",
+    "        plt.savefig(save_file, dpi=300, bbox_inches='tight')\n",
+    "        print(f\"✅ Pie chart saved as {save_file}\")\n",
+    "        plt.show()\n",
+    "        \n",
+    "        return True\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error creating pie chart: {e}\")\n",
+    "        return False\n",
+    "\n",
+    "# Create the pie chart\n",
+    "if df is not None:\n",
+    "    print(\"\\n🥧 Creating pie chart...\")\n",
+    "    pie_success = create_pie_chart(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c6f5b08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final results summary\n",
+    "if 'df' in locals() and df is not None:\n",
+    "    print(\"\\n🎉 Analysis completed!\")\n",
+    "    print(\"📁 Files created:\")\n",
+    "    if 'histogram_success' in locals() and histogram_success:\n",
+    "        print(\"  ✅ gender_identity_histogram_log.png\")\n",
+    "    if 'pie_success' in locals() and pie_success:\n",
+    "        print(\"  ✅ gender_identity_pie_chart.png\")\n",
+    "    \n",
+    "    print(f\"\\n📊 Final data info:\")\n",
+    "    print(f\"  • Total rows: {len(df):,}\")\n",
+    "    print(f\"  • Total observations: {df['Observation'].sum():,}\")\n",
+    "    print(f\"  • Gender categories: {df['Gender identity (8 categories)'].nunique()}\")\n",
+    "    print(f\"  • Local authorities: {df['Lower Tier Local Authorities'].nunique()}\")\n",
+    "else:\n",
+    "    print(\"❌ Analysis could not be completed\")"
+   ]
   }
  ],
  "metadata": {
