Update gender identity notebook with working CSV load and visualisation

--- a/gender_identity_analysis.ipynb
+++ b/gender_identity_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ef9929f5",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,8 @@
     "print(\"-\" * 50)\n",
     "\n",
     "# ✅ Load the CSV file\n",
-    "df = pd.read_csv(\"gender_identity_by_area.csv\")\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/LDolanLDolan/job-insight-live/main/gender_identity_by_area.csv\")\n",
+    "\n",
     "df = df[df['Gender identity (8 categories)'] != 'Does not apply']\n",
     "\n"
    ]
