Update gender identity notebook with working CSV load and visualisation

--- a/gender_identity_analysis.ipynb
+++ b/gender_identity_analysis.ipynb
@@ -17,11 +17,11 @@
     }
    ],
    "source": [
-    "\n",
     "\"\"\"\n",
     "Gender Identity Analysis - Jupyter Optimized\n",
     "Creates histogram and pie chart from CSV data\n",
     "\"\"\"\n",
+    "\n",
     "import sys\n",
     "import os\n",
     "from pathlib import Path\n",
@@ -33,10 +33,23 @@
     "print(f\"Current directory: {os.getcwd()}\")\n",
     "print(\"-\" * 50)\n",
     "\n",
-    "# ✅ Load the CSV file\n",
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/LDolanLDolan/job-insight-live/master/gender_identity_by_area.csv\")\n",
+    "# ✅ Define a robust CSV loader that works in Colab, Jupyter, or locally\n",
+    "def load_and_validate_data(csv_file=\"https://raw.githubusercontent.com/LDolanLDolan/job-insight-live/master/gender_identity_by_area.csv\"):\n",
+    "    \"\"\"Load CSV file from GitHub URL or local file\"\"\"\n",
+    "    try:\n",
+    "        df = pd.read_csv(csv_file)\n",
+    "        print(f\"✅ Successfully loaded data from {csv_file}\")\n",
+    "        print(f\"📊 Data shape: {df.shape}\")\n",
+    "        print(f\"📋 Columns: {list(df.columns)}\")\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error loading CSV: {e}\")\n",
+    "        return None\n",
     "\n",
-    "df = df[df['Gender identity (8 categories)'] != 'Does not apply']\n",
+    "# 🔁 Load and clean the data\n",
+    "df = load_and_validate_data()\n",
+    "if df is not None:\n",
+    "    df = df[df['Gender identity (8 categories)'] != 'Does not apply']\n",
     "\n"
    ]
   },
