Update gender identity notebook with working CSV load and visualisation

--- a/gender_identity_analysis.ipynb
+++ b/gender_identity_analysis.ipynb
@@ -16,6 +16,14 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b6ac77b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Gender Identity Analysis - Jupyter Optimized\n",
@@ -28,29 +36,26 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Print system info for debugging (helpful for Jupyter)\n",
+    "# Print system info for debugging (helpful for Jupyter/Colab)\n",
     "print(f\"Python version: {sys.version}\")\n",
     "print(f\"Current directory: {os.getcwd()}\")\n",
     "print(\"-\" * 50)\n",
     "\n",
-    "# ✅ Define a robust CSV loader that works in Colab, Jupyter, or locally\n",
-    "def load_and_validate_data(csv_file=\"https://raw.githubusercontent.com/LDolanLDolan/job-insight-live/master/gender_identity_by_area.csv\"):\n",
-    "    \"\"\"Load CSV file from GitHub URL or local file\"\"\"\n",
+    "# ✅ Function to load the CSV (local or fallback to GitHub)\n",
+    "def load_and_validate_data(csv_file=\"gender_identity_by_area.csv\"):\n",
+    "    \"\"\"Load CSV from local file or GitHub fallback\"\"\"\n",
     "    try:\n",
-    "        df = pd.read_csv(csv_file)\n",
-    "        print(f\"✅ Successfully loaded data from {csv_file}\")\n",
-    "        print(f\"📊 Data shape: {df.shape}\")\n",
-    "        print(f\"📋 Columns: {list(df.columns)}\")\n",
-    "        return df\n",
-    "    except Exception as e:\n",
-    "        print(f\"❌ Error loading CSV: {e}\")\n",
-    "        return None\n",
+    "        # Try local file first\n",
+    "        if Path(csv_file).exists():\n",
+    "            print(\"📁 Found local file.\")\n",
+    "            df = pd.read_csv(csv_file)\n",
+    "        else:\n",
+    "            # Fall back to GitHub URL\n",
+    "            print(\"🌐 Local file not found. Trying GitHub...\")\n",
+    "            github_url = \"https://raw.githubusercontent.com/LDolanLDolan/job-insight-live/master/gender_identity_by_area.csv\"\n",
+    "            df = pd.read_csv(github_url)\n",
     "\n",
-    "# 🔁 Load and clean the data\n",
-    "df = load_and_validate_data()\n",
-    "if df is not None:\n",
-    "    df = df[df['Gender identity (8 categories)'] != 'Does not apply']\n",
-    "\n"
+    "        print(f\"✅ Loaded CS\n"
    ]
   },
   {
